objects/SIP__c.object
<CustomObject>
    <fields>
        <fullName>Exceptional_Perf_Conversion_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <description>the % target for Exceptionla performance for FE&apos;s</description>
        <label>Exceptional Perf. Conversion Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exceptional_Perf_DIR_Growth_Target_USD__c</fullName>
        <formula>Prev_Year_Dir_Bill_Run_Rate_Result__c *( Exceptional_Perf_DIR_Growth_Target__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptional Perf. DIR Growth Target$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exceptional_Perf_DIR_Growth_Target__c</fullName>
        <label>Exceptional Perf. DIR Growth Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exceptional_Perf_GI_Target_Dollar__c</fullName>
        <formula>IF( ISPICKVAL(Plan_Year__c,&quot;2016&quot;), Prev_Year_53_weeks_result__c * Exceptional_Perf_GI_Target__c,
Exceptional_Perf_GI_Target__c * Total_Revenue_Baseline__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptional Perf. GI Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exceptional_Perf_GI_Target__c</fullName>
        <label>Exceptional Perf. GI Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exceptional_Perf_Growth_Reve__c</fullName>
        <defaultValue>0</defaultValue>
        <description>the target for Exceptional Performance growth  as % of last years total revenue</description>
        <inlineHelpText>the target for Exceptional Performance growth  as % of last years total revenue</inlineHelpText>
        <label>Exceptional Perf. Growth Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exceptional_Perf_Growth_Target_Dollar__c</fullName>
        <formula>IF( ISPICKVAL(Plan_Year__c,&quot;2016&quot;), Prev_Year_53_weeks_result__c * (Exceptional_Perf_Growth_Reve__c + 1),
(Exceptional_Perf_Growth_Reve__c +1) * Total_Revenue_Baseline__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptional Perf. Growth Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exceptional_Perf_NPS3_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The NPS3 Exceptional Performance Target as % of Plan Year Revenue</inlineHelpText>
        <label>Exceptional Perf. NPS3 Target %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exceptional_Perf_POS_Growth_Target_USD__c</fullName>
        <formula>( Exceptional_Perf_POS_Growth_Target__c  +1) *  Prev_Year_POS_Run_Rate_Result__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptional Perf. POS Growth Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exceptional_Perf_POS_Growth_Target__c</fullName>
        <label>Exceptional Perf. POS Growth Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exceptional_Performance_Percent__c</fullName>
        <formula>SIP_master_record__r.Exceptional_Performance_Payout_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptional Performance %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Automatic_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag &quot;exclude from automatic update&quot;. In that case the plan should be excluded from the jobs which populate and refresh any data. The default setting should be FALSE., as soon as the flag is turned to TRUE the plan should get excluded</description>
        <label>Exclude From Automatic Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FE_Conv_Perf_Lev_2_Payout_Percent__c</fullName>
        <formula>Max_Payout_Percent__c  * 0.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FE Conv Perf Lev 2 Payout %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FE_Conv_Perf_Lev_3_Payout_Percent__c</fullName>
        <formula>Max_Payout_Percent__c  * 0.4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FE Conv Perf Lev 3 Payout %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FE_Pipeline_Perf_Lev_2_Payout_Percent__c</fullName>
        <formula>Max_Payout_Percent__c  * 0.05</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FE Pipeline Perf Lev 2 Payout %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FE_Pipeline_Perf_Lev_3_Payout_Percent__c</fullName>
        <formula>Max_Payout_Percent__c  * 0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FE Pipeline Perf Lev 3 Payout %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FE_codes__c</fullName>
        <description>FE codes the user is responsible for, pre populated from sales hierachy obeject based on user id, however can be chnaged manually</description>
        <label>FE codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial Approver for SIP records before letter creation</description>
        <label>Financial Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SIP3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forecast_Attainment_Achieved_Weighting__c</fullName>
        <description>Forecast attainment results weighting, first time used for FE FY17</description>
        <label>Forecast Attainment Achieved Weighting %</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_Attainment_Result__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Shows the Forecast attainment results, populated bei Report API based</description>
        <label>Forecast Attainment Result %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GAM_codes__c</fullName>
        <description>GAM codes the plan participant is responsible for, can be filled manually for GAM&apos;s</description>
        <label>GAM codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GI_Result_Achieved_Weighting__c</fullName>
        <description>populated by workflow rule</description>
        <label>GI Result Achieved Weighting %</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GI_result_adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>to adjust year end GI revenue results</description>
        <label>GI result adjustment</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMI_Achieved_Weighting__c</fullName>
        <defaultValue>0</defaultValue>
        <description>the achieved weighting for GMI results, populated by workflow rules</description>
        <label>GMI Achieved Weighting %</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GPLs__c</fullName>
        <description>contains the GPL&apos;s for a PMIP the POM is responsible for. Used to pull baseline and result data</description>
        <label>GPLs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to be checked if the plan is not valid anymore, e.g. the user left TE or changed  role and the plan is not valid anymore</description>
        <inlineHelpText>to be checked if the plan is not valid anymore, e.g. the user left TE or changed  role and the plan is not valid anymore</inlineHelpText>
        <label>Inactive Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industrial_Performance_Result_Weighting__c</fullName>
        <formula>Industrial_Performance_Result__c * 0.05</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industrial Performance Result Weighting</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Industrial_Performance_Result__c</fullName>
        <formula>SIP_master_record__r.Industrial_Performance_Result__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industrial Performance Result</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Industrial_Performance_Weighting__c</fullName>
        <defaultValue>0.1</defaultValue>
        <inlineHelpText>% weighting of the Industrial performance Element</inlineHelpText>
        <label>Industrial Performance Weighting</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <description>Email of the initial submitter for the SIP approval process. Set by approval process, needed for email alerts upon rejection or approval.</description>
        <label>Initial Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Report_Finished__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Report Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lev2_Payout_10_Weighting__c</fullName>
        <formula>Max_Payout_Percent__c  * 0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lev2 Payout % 10% Weighting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lev2_Payout_15_Weighting__c</fullName>
        <formula>Max_Payout_Percent__c * 0.15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lev2 Payout % 15% Weighting</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lev2_Payout_20_Weighting__c</fullName>
        <formula>Max_Payout_Percent__c  * 0.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lev2 Payout % 20% Weighting</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_Application_Focus_Target__c</fullName>
        <description>Level 1 $ target for Application Focused Conversion</description>
        <label>Level 1 Application Focus Target $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1_Business_Driver_1__c</fullName>
        <description>Level 1 Target for Business Driver 1</description>
        <label>Level 1 Business Driver 1 %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_Business_Driver_2__c</fullName>
        <description>Level 1 Target for Business Driver 2</description>
        <label>Level 1 Business Driver 2 %</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_Business_Driver_Target__c</fullName>
        <formula>( Level_1_Business_Driver__c +1)*  Prev_Year_Appl_Focus_Billings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 1 Business Driver Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1_Business_Driver__c</fullName>
        <description>Business driver IND FY 18 Application Focus Growth</description>
        <label>Level 1 Business Driver %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_Conversion_Target_Dollar__c</fullName>
        <formula>IF( ISPICKVAL(Plan_Year__c,&quot;2016&quot;), Prev_Year_53_weeks_result__c * Level_1_Conversion_target__c,
Total_Revenue_Baseline__c * Level_1_Conversion_target__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 1 Conversion Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1_Conversion_target__c</fullName>
        <description>the level 1 conversion target for FE&apos;s and Sm in %</description>
        <inlineHelpText>Conversion target as % of previous year revenue</inlineHelpText>
        <label>Level 1 Conversion target %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_DIR_Growth_Target__c</fullName>
        <formula>Prev_Year_Dir_Bill_Run_Rate_Result__c *( Level_1_Direct_Growth_Target__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 1 DIR Growth Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_1_Direct_Growth_Target__c</fullName>
        <label>Level 1 Direct Growth Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_Forecast_Attainment_Target__c</fullName>
        <description>Forecast attainment target</description>
        <inlineHelpText>the forecast attainment target in %.  Expected attainment compared to total forecast of all opportunities in scope</inlineHelpText>
        <label>Level 1 Forecast Attainment Target %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_GI_Target_Dollar__c</fullName>
        <formula>IF( ISPICKVAL(Plan_Year__c,&quot;2016&quot;), Prev_Year_53_weeks_result__c * Level_1_GI_Target__c,
Total_Revenue_Baseline__c * Level_1_GI_Target__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 1 GI Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1_GI_Target__c</fullName>
        <description>field for Level 1 Grow / Invest revenue targets %</description>
        <inlineHelpText>Is defined as % of previous year total  revenue. Example: if previous year total revenue was USD 5 mio and  target for GI revenue in plan year is USD 500k the target needs to be set to 10%</inlineHelpText>
        <label>Level 1 GI Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_GMI_target__c</fullName>
        <label>Level 1 GMI target $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1_Growth_Target_Dollar__c</fullName>
        <formula>IF( ISPICKVAL(Plan_Year__c,&quot;2016&quot;), Prev_Year_53_weeks_result__c * (Level_1_Growth_Target__c + 1),
(Level_1_Growth_Target__c +1) * Total_Revenue_Baseline__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 1 Growth Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1_Growth_Target__c</fullName>
        <description>the level 1 revenue growth target in %</description>
        <inlineHelpText>the level 1 revenue growth target in % of the last  year&apos;s total  revenue</inlineHelpText>
        <label>Level 1 Growth Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_NPS1_target__c</fullName>
        <inlineHelpText>NPS1 target Level 1 as % of plan year revenue</inlineHelpText>
        <label>Level 1 NPS1 target %</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_NPS3_target_Dollar__c</fullName>
        <formula>Level_2_Growth_Target_Dollar__c  *  Level_1_NPS3_target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 1 NPS3 target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1_NPS3_target__c</fullName>
        <description>the % target of NPS3 sales of plan year revenue</description>
        <inlineHelpText>NPS3 target Level 1  as % of plan year revenue</inlineHelpText>
        <label>Level 1 NPS3 target %</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_NPS_target__c</fullName>
        <description>the Level 1 target of Net Promoter Score</description>
        <label>Level 1 NPS target %</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_POS_Growth_Target_Dollar__c</fullName>
        <formula>Prev_Year_POS_Run_Rate_Result__c *( Level_1_POS_Growth_Target__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 1 POS Growth Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_1_POS_Growth_Target__c</fullName>
        <label>Level 1 POS Growth Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_POS_in_specific_Region__c</fullName>
        <label>Level 1 POS in specific Region Target %</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_Pipeline_Target_Dollar__c</fullName>
        <formula>Total_Revenue_Baseline__c  *  Level_1_Pipeline_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 1 Pipeline Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1_Pipeline_Target__c</fullName>
        <description>the level 1 pipeline target in % for FE&apos;s</description>
        <label>Level 1 Pipeline Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_1_SMI_cal_target__c</fullName>
        <formula>(Prev_Year_Standard_Margin_Dollar__c  *  Level_1_SMI_target__c)  + Prev_Year_Standard_Margin_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 1 SMI cal target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1_SMI_target_Dollar__c</fullName>
        <description>SMI target field for USD targets</description>
        <label>Level 1 SMI target $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1_SMI_target__c</fullName>
        <description>level 1 target for SMI</description>
        <inlineHelpText>For Sales SMI is defined as  improvement % of previous year restated margin e.g. +1% =&gt; from 42% to 43%, 
For PM it is defined as increase of absolute standard margin, e.g. increase margin by 1,5% =&gt; from USD 1000k to USD 1015k)</inlineHelpText>
        <label>Level 1 SMI target %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_2_Application_Focus_Target__c</fullName>
        <description>Level 2 $ target for Application Focused Conversion</description>
        <label>Level 2 Application Focus Target $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2_Business_Driver_1__c</fullName>
        <description>Level 2 Target for Business Driver 1</description>
        <label>Level 2 Business Driver 1 %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_2_Business_Driver_Target__c</fullName>
        <formula>( Level_2_Business_Driver__c +1)* Prev_Year_Appl_Focus_Billings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 2 Business Driver Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2_Business_Driver__c</fullName>
        <label>Level 2 Business Driver %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_2_Conversion_Target_Dollar__c</fullName>
        <formula>IF( ISPICKVAL(Plan_Year__c,&quot;2016&quot;), Prev_Year_53_weeks_result__c * Level_2_Conversion_Target__c,
Total_Revenue_Baseline__c * Level_2_Conversion_Target__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 2 Conversion Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2_Conversion_Target__c</fullName>
        <description>the level 2 conversion target in % for FE&apos;s and SM</description>
        <label>Level 2 Conversion Target %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_2_DIR_Growth_Target__c</fullName>
        <formula>Prev_Year_Dir_Bill_Run_Rate_Result__c *( Level_2_Direct_Growth_Target__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 2 DIR Growth Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_2_Direct_Growth_Target__c</fullName>
        <label>Level 2 Direct Growth Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_2_Forecast_Attainment_Target__c</fullName>
        <label>Level 2 Forecast Attainment Target %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_2_GI_Target_Dollar__c</fullName>
        <formula>IF( ISPICKVAL(Plan_Year__c,&quot;2016&quot;), Prev_Year_53_weeks_result__c * Level_2_GI_Target__c,
Total_Revenue_Baseline__c * Level_2_GI_Target__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 2 GI Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2_GI_Target__c</fullName>
        <label>Level 2 GI Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_2_GMI_target__c</fullName>
        <label>Level 2 GMI target $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2_Growth_Target_Dollar__c</fullName>
        <formula>IF( ISPICKVAL(Plan_Year__c,&quot;2016&quot;), Prev_Year_53_weeks_result__c * (Level_2_Growth_Target__c + 1),
(Level_2_Growth_Target__c +1) * Total_Revenue_Baseline__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 2 Growth Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2_Growth_Target__c</fullName>
        <description>the level 2 revenue growth target in %</description>
        <inlineHelpText>the level 2 revenue growth target in % of the last  year&apos;s total  revenue</inlineHelpText>
        <label>Level 2 Growth Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_2_NPS3_target_Dollar__c</fullName>
        <formula>Level_2_Growth_Target_Dollar__c  *  Level_2_NPS3_target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 2 NPS3 target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2_POS_Growth_Target_Dollar__c</fullName>
        <formula>Prev_Year_POS_Run_Rate_Result__c *( Level_2_POS_Growth_Target__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 2 POS Growth Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_2_POS_Growth_Target__c</fullName>
        <label>Level 2 POS Growth Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_2_POS_in_specific_Region__c</fullName>
        <label>Level 2 POS in specific Region Target %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_2_Pipeline_Target_Dollar__c</fullName>
        <formula>Total_Revenue_Baseline__c  *  Level_2_Pipeline_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 2 Pipeline Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2_Pipeline_Target__c</fullName>
        <description>the level 2 pipeline target in % for FE&apos;s</description>
        <label>Level 2 Pipeline Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_2_SMI_cal_target__c</fullName>
        <formula>(Prev_Year_Standard_Margin_Dollar__c * Level_2_SMI_target__c) + Prev_Year_Standard_Margin_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 2 SMI cal target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2_SMI_target_Dollar__c</fullName>
        <label>Level 2 SMI target $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2_SMI_target__c</fullName>
        <label>Level 2 SMI target %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_3_Application_Focus_Target__c</fullName>
        <description>Level 3 $ target for Application Focused Conversion</description>
        <label>Level 3 Application Focus Target $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3_Business_Driver_Target__c</fullName>
        <formula>( Level_3_Business_Driver__c +1)* Prev_Year_Appl_Focus_Billings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 3 Business Driver Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3_Business_Driver__c</fullName>
        <label>Level 3 Business Driver %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_3_Conversion_Target_Dollar__c</fullName>
        <formula>IF( ISPICKVAL(Plan_Year__c,&quot;2016&quot;), Prev_Year_53_weeks_result__c * Level_3_Conversion_Target__c,
Total_Revenue_Baseline__c * Level_3_Conversion_Target__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 3 Conversion Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3_Conversion_Target__c</fullName>
        <description>the level 3 conversion target in % for FE&apos;s and SM</description>
        <label>Level 3 Conversion Target %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_3_DIR_Growth_Target__c</fullName>
        <formula>Prev_Year_Dir_Bill_Run_Rate_Result__c *( Level_3_Direct_Growth_Target__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 3 DIR Growth Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_3_Direct_Growth_Target__c</fullName>
        <label>Level 3 Direct Growth Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_3_Forecast_Attainment_Target__c</fullName>
        <label>Level 3 Forecast Attainment Target %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_3_GI_Target_Dollar__c</fullName>
        <formula>IF( ISPICKVAL(Plan_Year__c,&quot;2016&quot;), Prev_Year_53_weeks_result__c * Level_3_GI_Target__c,
Total_Revenue_Baseline__c * Level_3_GI_Target__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 3 GI Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3_GI_Target__c</fullName>
        <label>Level 3 GI Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_3_GMI_target__c</fullName>
        <label>Level 3 GMI target $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3_Growth_Target_Dollar__c</fullName>
        <formula>IF( ISPICKVAL(Plan_Year__c,&quot;2016&quot;), Prev_Year_53_weeks_result__c * (Level_3_Growth_Target__c + 1),
(Level_3_Growth_Target__c +1) * Total_Revenue_Baseline__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 3 Growth Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3_Growth_Target__c</fullName>
        <description>Level 3 revenue growth target in %</description>
        <inlineHelpText>Level 3 revenue growth target in %</inlineHelpText>
        <label>Level 3 Growth Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_3_NPS3_target_Dollar__c</fullName>
        <formula>Level_2_Growth_Target_Dollar__c  *  Level_3_NPS3_target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 3 NPS3 target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3_POS_Growth_Target_Dollar__c</fullName>
        <formula>Prev_Year_POS_Run_Rate_Result__c *( Level_3_POS_Growth_Target__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 3 POS Growth Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_3_POS_Growth_Target__c</fullName>
        <label>Level 3 POS Growth Target %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_3_POS_in_specific_Region__c</fullName>
        <label>Level 3 POS in specific Region Target %</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level_3_Pipeline_Target_Dollar__c</fullName>
        <formula>Total_Revenue_Baseline__c  *  Level_3_Pipeline_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 3 Pipeline Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>